Adjusted jumbotron spacing, fixed activity fields clearing if data was deleted (removed unnecessary if statement)

--- a/05-Third-Party-APIs/Develop/style.css
+++ b/05-Third-Party-APIs/Develop/style.css
@@ -18,6 +18,7 @@ textarea{
   color: rgb(0, 0, 0);
   border-radius: 0;
   border-bottom: 5px solid black;
+  padding: 2rem 2rem;
 }
 
 .description{
